# sounds-good

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2dbc553385c5_create_initial_tables.py  6b10ba2c0a55_add_spotify_playlist_id_to_playlists.py  c4f8a1d2e3b4_playlist_tracks_pk_playlist_position.py
backend/src/: config.py  main.py
backend/src/clients/: chromadb_client.py  llm_client.py  spotify_client.py
backend/src/controllers/: auth_controller.py  library_controller.py  playlist_controller.py  search_controller.py
backend/src/middleware/: auth_middleware.py  error_handler.py
backend/src/models/: database.py  playlist.py  spotify_token.py  track.py  user.py
backend/src/repositories/: playlist_repository.py  token_repository.py  track_repository.py  user_repository.py
backend/src/schemas/: playlist_schema.py  request_schema.py  track_schema.py  user_schema.py
backend/src/services/: duration_matcher.py  embedding_service.py  llm_service.py  playlist_generation_service.py  prompt_builder.py  spotify_auth_service.py  spotify_service.py  track_validator.py  vector_search_service.py
backend/src/utils/: token_encryptor.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_controller.py  test_library_controller.py  test_playlist_controller.py
backend/tests/unit/: test_chromadb_client.py  test_duration_matcher.py  test_embedding_service.py  test_llm_service.py  test_playlist_generation_service.py  (+9 more)
(+33 files in other folders)
